--- a/blog/source/_posts/20200319.md
+++ b/blog/source/_posts/20200319.md
@@ -2,7 +2,7 @@
 title: '20200319'
 date: 2020-08-27 00:34:13
 tags: Let it go
-password: haiyoushenmenenggouzudang
+password: haiyoushenmene
 ---
 
 今天跟宝宝聊到了宝宝在闲鱼卖的鞋子，然后又转到了那些骚扰宝宝的私信。宝宝就问我是不是也这样买过丝袜，我当时说我没有过。但是宝宝给我截图摆证据，我还百般抵赖。最后才坦白自己买过袜子。
