--- a/blog/source/_posts/20200625.md
+++ b/blog/source/_posts/20200625.md
@@ -2,7 +2,7 @@
 title: '20200625'
 date: 2020-08-27 00:41:01
 tags: Let it go
-password: haiyoushenmenenggouzudang
+password: haiyoushenmene
 ---
 
 希望这次是最后一次给你写信了。
