--- a/blog/source/_posts/20200811.md
+++ b/blog/source/_posts/20200811.md
@@ -2,7 +2,7 @@
 title: '20200811'
 date: 2020-08-27 00:42:28
 tags: Let it go
-password: haiyoushenmenengggouzudang
+password: haiyoushenmene
 ---
 
 又一次惹宝宝生气了，一个星期之久，是我没有好好调整自己的心态，我本来就不是一个喜欢社交的人，不工作之外我最想做的事情就是睡觉休息，所以本能会排斥各种局，哪怕是跟桑磊和老黎，我们也是约很久才能凑得到一起。我懒得在不熟的人面前应付着，懒得在别人面前端着，休息时间我就喜欢用最舒服最慵懒的方式好好休息。这就是我本能反应逃避社交的原因。
