--- a/blog/source/_posts/20200815.md
+++ b/blog/source/_posts/20200815.md
@@ -2,7 +2,7 @@
 title: '20200815'
 date: 2020-08-27 00:43:38
 tags: Let it go
-password: haiyoushenmenenggouzudang
+password: haiyoushenmene
 ---
 
 拖了这么久一直没写，觉得挺对不起你，其实我知道你让我写检讨就是想看看我到底有没有心思去反省自己的生活处事的方式，我明白我自己这样的相处方式不一定适用于所有的人，我也应该尝试着去用你的生活方式去对待你的朋友，其实我最近这些天一直都在告诉自己要注意着和你妈妈聊天，看到消息尽量要有些互动，我觉得我已经在尽力在群里活跃。每天记着点红包，当然我可能还是不会每天没话题找话题聊天，但是我已经在努力在群里和你妈互动了。
